fix(a11y): fix fixed-width reflow and line-height text spacing violations

--- a/packages/map-template/src/components/ChatWindow/ChatInput/ChatInput.scss
+++ b/packages/map-template/src/components/ChatWindow/ChatInput/ChatInput.scss
@@ -49,7 +49,7 @@
     resize: none;
     min-height: 40px;
     max-height: 120px;
-    line-height: 1.4;
+    line-height: 1.5;
     background-color: transparent;
     margin: 0;
     vertical-align: middle;
