--- a/packages/map-template/src/components/VenueSelector/VenueSelector.scss
+++ b/packages/map-template/src/components/VenueSelector/VenueSelector.scss
@@ -128,6 +128,7 @@ $align-offset: 2px;
     @media (min-width: variables.$desktop-breakpoint) {
         &__content {
             width: 568px;
+            max-width: 100%;
             right: var(--spacing-small);
             bottom: var(--spacing-large);
             top: var(--spacing-small);
