--- a/packages/map-template/src/components/Wayfinding/Wayfinding.scss
+++ b/packages/map-template/src/components/Wayfinding/Wayfinding.scss
@@ -68,7 +68,7 @@
         padding: var(--spacing-medium);
         font-size: var(--font-size-medium);
         font-weight: var(--font-weight-large);
-        line-height: 1rem;
+        line-height: 1.5;
         transition: all 300ms ease 0s;
         border-radius: var(--rounding-large);
         background-color: rgb(249, 250, 251);
